[package]
name = "uptime_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"] } # Pinned
actix-web = "4.0.0" # Pinned to an even older version
toml = "0.8.0" # Pinned
log = "0.4.0" # Pinned
env_logger = "0.11.0" # Pinned
native-tls = "0.2"
openssl = "0.10"
prometheus = { version = "0.13.0", features = ["process"] } # Pinned to an older patch
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
jsonpath_lib = "0.3"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
xpath_reader = "0.5"
urlencoding = "2.1"
# Database and service health check dependencies
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
redis = { version = "0.26", features = ["tokio-comp"] }
lapin = "2.3" # RabbitMQ client
rdkafka = { version = "0.36", features = ["cmake-build"] }
mysql_async = "0.32"
mongodb = "2.8"
# Note: Elasticsearch will use HTTP client instead of dedicated crate

[dev-dependencies]
tempfile = "3" # Already added from previous step, ensure it's here
wiremock = "0.6"
# tokio is already a main dependency, its features ["macros", "rt-multi-thread"] are suitable for tests.
# reqwest is already a main dependency, its features ["json"] are suitable for tests.
# serde_json = "1.0" # Not strictly needed yet, can add if required for parsing JSON in tests
# toml is already a main dependency, available for test config manipulation if needed.
