[package]
name = "uptime_monitor"
version = "0.1.0"
edition = "2021"

[features]
default = []
mongodb = ["dep:mongodb"]
mysql = ["dep:mysql_async"]
kafka = ["dep:rdkafka"]
rabbitmq = ["dep:lapin"]
redis = ["dep:redis"]
postgres = ["dep:tokio-postgres"]
# Convenience feature to enable all DB checks
full = ["mongodb", "mysql", "kafka", "rabbitmq", "redis", "postgres"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"] }
base64 = "0.22"
http = "1"
actix-web = "4.0.0"
toml = "0.8.0"
log = "0.4.0"
env_logger = "0.11.0"
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.13.0", features = ["process"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
jsonpath_lib = "0.3"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
xpath_reader = "0.5"
urlencoding = "2.1"

# Optional DB/service dependencies
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
redis = { version = "0.26", features = ["tokio-comp"], optional = true }
lapin = { version = "2.3", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
mysql_async = { version = "0.32", optional = true }
mongodb = { version = "2.8", optional = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"