[package]
name = "uptime_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1"
actix-web = "4"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
native-tls = "0.2"
openssl = "0.10"
prometheus = { version = "0.13", features = ["process"] }

[dev-dependencies]
tempfile = "3" # Already added from previous step, ensure it's here
wiremock = "0.6"
# tokio is already a main dependency, its features ["macros", "rt-multi-thread"] are suitable for tests.
# reqwest is already a main dependency, its features ["json"] are suitable for tests.
# serde_json = "1.0" # Not strictly needed yet, can add if required for parsing JSON in tests
# toml is already a main dependency, available for test config manipulation if needed.
